# json-rust

./: Cargo.toml  criterion-against-baseline-master.txt
benches/: log.rs  serde.rs
benches/shared/: data.rs  http_log.rs
src/: object.rs
