[package]
name = "json"
version = "0.12.4"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
description = "JSON implementation in Rust"
repository = "https://github.com/maciejhirsz/json-rust"
documentation = "https://docs.rs/json/"
license = "MIT/Apache-2.0"
edition = "2018"

[dev-dependencies]
criterion = "0.4"
serde = "1.0.155"
serde_json = "1.0.94"
serde_repr = "0.1.11"

[lib]
bench = false

[dependencies]
smartstring = "1"

[[bench]]
name = "log"
harness = false

[[bench]]
name = "serde"
harness = false
